Initialised flexbox interactive

--- a/style.css
+++ b/style.css
@@ -29,6 +29,9 @@ hr{
 .h3{font-size: 2rem;}
 .h4{font-size: 1.5rem; margin-bottom: 10px;}
 
+.trans-2{transition: 0.2s ease-out;}
+.trans-2 .flex-item{transition: 0.2s ease-out;}
+
 .full-height {
     height: 100vh;
 }
@@ -395,4 +398,12 @@ pre code{
 /*Flex Basis*/
 .f-basis.o .flex-item{
     flex-basis: 100px;
+}
+
+
+/*Interactive Flexbox*/
+
+/*Controller*/
+.controller{
+
 }
