--- a/style.css
+++ b/style.css
@@ -208,14 +208,14 @@ pre code{
 .flex-item-font-alt .item7 p{font-size: 2rem;}
 .flex-item-font-alt .item8 p{font-size: 4rem;}
 
-.item1{background-color: #673AB7;color: #fff;}
-.item2{background-color: #3F51B5;color: #fff;}
-.item3{background-color: #2196F3;color: #fff;}
-.item4{background-color: #03A9F4;color: #fff;}
-.item5{background-color: #00BCD4;color: #fff;}
-.item6{background-color: #009688;color: #fff;}
-.item7{background-color: #4CAF50;color: #fff;}
-.item8{background-color: #8BC34A;color: #fff;}
+.item1{background-color: #673AB7; color: #fff;}
+.item2{background-color: #3F51B5; color: #fff;}
+.item3{background-color: #2196F3; color: #fff;}
+.item4{background-color: #03A9F4; color: #fff;}
+.item5{background-color: #00BCD4; color: #fff;}
+.item6{background-color: #009688; color: #fff;}
+.item7{background-color: #4CAF50; color: #fff;}
+.item8{background-color: #8BC34A; color: #fff;}
 
 .bg-red{background-color: red;}
 
@@ -404,10 +404,13 @@ pre code{
 /*Interactive Flexbox*/
 
 /*Controller*/
-.controller{
-
-}
 .controller input[type="number"]{
     width: 25px;
     margin: 0 4px;
+}
+#flex-basis-controller.controller input[type="number"]{
+    width: 50px;
+}
+.interactive-fb-100 .flex-item{
+    flex-basis: 100px;
 }
